--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,28 @@ li:last-of-type .dropdown__link::after {
     background: #41A28E;
     border-radius: 5px;
 }
+
+.window{
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.window__form{
+    background: #fff;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.window:target {
+    display: flex;
+}
